# monocular_pose_and_forces_estimation

./: .gitignore  README.md  pyproject.toml  requirements.txt
calibration/: camera_calibration_xiaomi_mi11_ultra_video_vertical.json
poster/: poster.odp
report/: .gitignore  references.bib  report.tex
report/content/: 1_introduction.tex  2_paper_presentation.tex  3_our_work.tex  4_discussion.tex  5_conclusion.tex  appendix.tex
samples/: weight_lifting_coarse_ik.pkl
scripts/: arm_model_demo.ipynb  batch_video_legacy.py  batch_video_minimalistic.py  batch_video_processing.py  inverse_dynamics.ipynb  optimisation_demo_2.ipynb  optimization_demo.ipynb  optimization_real.ipynb  optimiziation_demo.ipynb  save_video.py
src/projectyl/: __init__.py  projectyl_test.ipynb
src/projectyl/algo/: background_substraction.py  interactive_segmentation.py  pose_estimation.py  segmentation.py
src/projectyl/dynamics/: armmodel.py  dynamics.py  inverse_dynamics.py  inverse_kinematics.py  legacy_inverse_dynamics.py  simulation.py
src/projectyl/utils/: arm.py  camera_calibration.py  camera_projection.py  cli_parser_tool.py  fit_camera_pose.py  interactive.py  interactive_demo.py  io.py  pose_overlay.py  properties.py  segmentation_masks.py
src/projectyl/video/: decoder.py  encoder.py  props.py
studies/: studies.md
studies/camera_projection/: arm_projection.ipynb  fit_cam.ipynb  projective_cost.ipynb
studies/projectile/: CMakeLists.txt  fit_trajectory.py  projectile.cc  projectile.cpp  simulate.h
test/: test_camera_projection.py  test_segmentation.py
